# LabsOop

./: .gitignore  .gitmodules  CMakeLists.txt  InputFile.txt  Makefile  PointGenerator.cpp  README.md  main.cpp
.github/workflows/: ci.yaml
include/: Array.h  BitString.h  Figure.h  FigureFactory.h  FigureValidator.h  Hexagon.h  HexagonFactory.h  HexagonValidator.h  Knight.hpp  KnightErrant.h  MaxAndMinForMyArray.h  MyArray.h  NPC.h  Octagon.h  OctagonFactory.h  OctagonValidator.h  Pentagon.h  PentagonFactory.h  PentagonValidator.h  Point.h  SlaveSaler.hpp  Slaver.h  Squirrel.h  Squirrel.hpp  VisitorFight.h  line_editor.h  npc.hpp
mai_oop_examples_public/examples/lection04_05/01_FirstTryOnInheritance/: main.cpp
output/: PointGenerator  main
src/: Figure.cpp  Hexagon.cpp  HexagonFactory.cpp  HexagonValidator.cpp  Knight.cpp  KnightErrant.cpp  NPC.cpp  Octagon.cpp  OctagonFactory.cpp  OctagonValidator.cpp  Pentagon.cpp  PentagonFactory.cpp  PentagonValidator.cpp  Point.cpp  SlaveSaler.cpp  Slaver.cpp  Squirrel.cpp
src/lab0/: BitString.cpp  MaxAndMinForMyArray.cpp  MyArray.cpp  lib.cpp  line_editor.cpp
test/: tests.cpp  testsHexagon.cpp  testsOctagon.cpp  testsPentagon.cpp
